--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
     </nav>
   </header>
 
+<!-- Hero Section -->
+<section class="relative h-screen flex items-center justify-center text-center text-white bg-black">
+  <!-- Background Flyer -->
+  <div class="absolute inset-0">
+    <img src="TG1309.png" alt="Step Up x Trigga Fingaz Flyer" class="w-full h-full object-cover" />
+    <div class="absolute inset-0 bg-black/70"></div> <!-- Overlay oscuro -->
+  </div>
+
+  <!-- Content -->
+  <div class="relative z-10 max-w-3xl px-6">
+    <h1 class="text-5xl md:text-6xl font-bold mb-6 glow">
+      Estamos de vuelta: Step Up x Trigga Fingaz
+    </h1>
+    <p class="text-lg md:text-xl text-gray-300 mb-8">
+      Una noche de colaboración inédita, energía brutal y basslines pesados.
+    </p>
+
+    <!-- CTA Button -->
+    <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre"
+       target="_blank"
+       class="btn btn-outline text-lg px-8 py-3">
+      Consigue tus tickets ahora
+    </a>
+  </div>
+</section>
+
+  
 <!-- Hero -->
 <section class="text-center py-24 px-6 bg-glass">
   <img src="Logo.png" alt="Step Up Logo" class="mx-auto w-72 sm:w-80 md:w-96 mb-6" />
@@ -160,16 +187,7 @@
         <a href="https://www.passline.com/eventos/so-liquid-02?fbclid=PAZXh0bgNhZW0CMTEAAafwKCyF5ciYeEbuQi95uHRhD74gSPA63fZTIkgYWSzVNX_dYk6yiOC15gBcaQ_aem_YwY8ETuXMlfu4qFpyIgW4Q" target="_blank" class="btn btn-outline">Tickets acá</a>
       </div>
     </div>
-<!-- Event Card 3 -->
-    <div class="flex flex-col border border-white/10 rounded-lg p-6 hover:bg-white/5 transition">
-      <img src="TF2308.jpg" alt="TF 0208" class="w-full max-h-96 object-cover mb-4 rounded-lg shadow" />
-      <h3 class="text-xl font-bold text-white mb-1">Trigga Fingaz</h3>
-      <p class="text-sm text-gray-300">23 Agosto 2025 · Club Room · Santiago</p>
-      <p class="text-sm text-gray-400 mt-2">Line-up: Inguerzon, Triggered, Stomp, Zaulo, Luca Syn & GDS (ESP). Hosted by MC William C</p>
-      <div class="mt-auto pt-4 text-center">
-        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-luca-syn-gds-sabado-23-agosto" target="_blank" class="btn btn-outline">Tickets acá</a>
-      </div>
-    </div>    
+
   </div>
 </section>
 
@@ -321,4 +339,5 @@
   
 </body>
 </html>
+
 
