--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <section class="relative h-screen flex items-center justify-center text-center text-white bg-black">
   <!-- Background Flyer -->
   <div class="absolute inset-0">
-    <img src="TG1309.png" alt="Step Up x Trigga Fingaz Flyer" class="w-full h-full object-cover" />
+    <img src="" alt="Step Up x Trigga Fingaz Flyer" class="w-full h-full object-cover" />
     <div class="absolute inset-0 bg-black/70"></div> <!-- Overlay oscuro -->
   </div>
 
@@ -339,5 +339,6 @@
   
 </body>
 </html>
+
 
 
