--- a/index.html
+++ b/index.html
@@ -65,30 +65,24 @@
   </header>
 
 <!-- Hero Section -->
-<section class="relative h-screen flex items-center justify-center text-center text-white bg-black">
-  <!-- Background Flyer -->
-  <div class="absolute inset-0">
-    <img src="WPTG1309.png" alt="Step Up x Trigga Fingaz Flyer" class="w-full h-full object-cover" />
-    <div class="absolute inset-0 bg-black/0"></div> <!-- Overlay oscuro -->
-  </div>
-
-  <!-- Content -->
-  <div class="relative z-10 max-w-3xl px-6">
-    <h1 class="text-5xl md:text-6xl font-bold mb-6 glow">
+<section id="hero" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
+  <div class="absolute inset-0 bg-black/60"></div>
+  <div class="relative z-10 max-w-3xl mx-auto px-6">
+    
+    <!-- Text content -->
+    <h1 class="text-4xl md:text-6xl font-bold text-white glow mb-6">
       Estamos de vuelta: Step Up x Trigga Fingaz
     </h1>
     <p class="text-lg md:text-xl text-gray-300 mb-8">
       Una noche de colaboración inédita, energía brutal y basslines pesados.
     </p>
 
-    <!-- CTA Button -->
-    <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre"
-       target="_blank"
-       class="btn btn-outline text-lg px-8 py-3">
-      Consigue tus tickets ahora
-    </a>
+    <!-- Flyer -->
+    <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="mx-auto rounded-lg shadow-xl max-h-[500px] object-contain" />
+    
   </div>
 </section>
+
 
   
 <!-- Hero -->
@@ -339,6 +333,7 @@
   
 </body>
 </html>
+
 
 
 
