--- a/index.html
+++ b/index.html
@@ -66,22 +66,27 @@
 
 <!-- Hero Section -->
 <section id="hero" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
-  <div class="absolute inset-0 bg-black/60"></div>
-  <div class="relative z-10 max-w-3xl mx-auto px-6">
+  <div class="absolute inset-0 bg-black/0"></div>
+  <div class="relative z-10 max-w-6xl mx-auto px-6 grid md:grid-cols-2 items-center gap-8">
     
     <!-- Text content -->
-    <h1 class="text-4xl md:text-6xl font-bold text-white glow mb-6">
-      Estamos de vuelta: Step Up x Trigga Fingaz
-    </h1>
-    <p class="text-lg md:text-xl text-gray-300 mb-8">
-      Una noche de colaboración inédita, energía brutal y basslines pesados.
-    </p>
+    <div>
+      <h1 class="text-4xl md:text-6xl font-bold text-white glow mb-6">
+        Estamos de vuelta: Step Up x Trigga Fingaz
+      </h1>
+      <p class="text-lg md:text-xl text-gray-300">
+        Una noche de colaboración inédita, energía brutal y basslines pesados.
+      </p>
+    </div>
 
     <!-- Flyer -->
-    <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="mx-auto rounded-lg shadow-xl max-h-[500px] object-contain" />
+    <div class="flex justify-center">
+      <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[500px] object-contain" />
+    </div>
     
   </div>
 </section>
+
 
 
   
@@ -333,6 +338,7 @@
   
 </body>
 </html>
+
 
 
 
