--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
       <p class="text-lg md:text-xl text-gray-300">
         Una noche de colaboración inédita, energía brutal y basslines pesados.
       </p>
+      <!-- CTA Button -->
+    <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-19-julio"
+       target="_blank"
+       class="btn btn-outline text-lg px-8 py-3">
+      Consigue tus tickets ahora
+    </a>
     </div>
 
     <!-- Flyer -->
@@ -338,6 +344,7 @@
   
 </body>
 </html>
+
 
 
 
