--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
         Una noche de colaboración inédita, energía brutal y basslines pesados.
       </p>
 
-      
       <!-- CTA Button -->
-    <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-19-julio"
-       target="_blank"
-       class="btn btn-outline text-lg px-8 py-3">
-      Consigue tus tickets ahora
-    </a>
+      <div class="mt-6">
+        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-19-julio"
+           target="_blank"
+           class="inline-block px-8 py-3 border-2 border-cyan-400 text-cyan-400 rounded-full font-semibold text-lg hover:bg-cyan-400 hover:text-black transition-all duration-300 shadow-lg">
+          🎟️ Consigue tus tickets ahora
+        </a>
+      </div>
     </div>
 
     <!-- Flyer -->
@@ -94,6 +95,7 @@
     
   </div>
 </section>
+
 
 
 
@@ -346,6 +348,7 @@
   
 </body>
 </html>
+
 
 
 
