--- a/index.html
+++ b/index.html
@@ -66,15 +66,16 @@
 
 <!-- Hero Section -->
 <section id="hero" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
-  <div class="absolute inset-0 bg-black/0"></div>
+  <div class="absolute inset-0 bg-black/50"></div> <!-- le puse /50 para que el bg se note más -->
+  
   <div class="relative z-10 max-w-6xl mx-auto px-6 grid md:grid-cols-2 items-center gap-8">
     
     <!-- Text content -->
     <div>
-      <h1 class="text-4xl md:text-6xl font-bold text-white glow mb-6">
+      <h1 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-bold text-white glow mb-6 leading-tight">
         Estamos de vuelta: Step Up x Trigga Fingaz
       </h1>
-      <p class="text-lg md:text-xl text-gray-300">
+      <p class="text-base sm:text-lg md:text-xl text-gray-300 max-w-md mx-auto md:mx-0">
         Una noche de colaboración inédita, energía brutal y basslines pesados.
       </p>
 
@@ -82,11 +83,20 @@
       <div class="mt-6">
         <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-19-julio"
            target="_blank"
-           class="inline-block px-8 py-3 border-2 border-cyan-400 text-cyan-400 rounded-full font-semibold text-lg hover:bg-cyan-400 hover:text-black transition-all duration-300 shadow-lg">
+           class="inline-block px-6 sm:px-8 py-2 sm:py-3 border-2 border-cyan-400 text-cyan-400 rounded-full font-semibold text-base sm:text-lg hover:bg-cyan-400 hover:text-black transition-all duration-300 shadow-lg">
           🎟️ Consigue tus tickets ahora
         </a>
       </div>
     </div>
+
+    <!-- Flyer -->
+    <div class="hidden md:flex justify-center">
+      <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[400px] lg:max-h-[500px] object-contain" />
+    </div>
+    
+  </div>
+</section>
+
 
     <!-- Flyer -->
     <div class="flex justify-center">
@@ -348,6 +358,7 @@
   
 </body>
 </html>
+
 
 
 
