--- a/index.html
+++ b/index.html
@@ -89,12 +89,10 @@
       </div>
     </div>
 
-    <!-- Flyer -->
-    <div class="hidden md:flex justify-center">
-      <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[400px] lg:max-h-[500px] object-contain" />
-    </div>
-    
-  </div>
+   <!-- Flyer -->
+<div class="mt-8 flex justify-center md:mt-0">
+  <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[400px] lg:max-h-[500px] object-contain w-full max-w-xs sm:max-w-sm md:max-w-md" />
+</div>
 </section>
 
 
@@ -358,6 +356,7 @@
   
 </body>
 </html>
+
 
 
 
