--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <!-- Hero Section -->
 <section id="hero" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
-  <div class="absolute inset-0 bg-black/50"></div> <!-- le puse /50 para que el bg se note más -->
+  <div class="absolute inset-0 bg-black/0"></div> 
   
   <div class="relative z-10 max-w-6xl mx-auto px-6 grid md:grid-cols-2 items-center gap-8">
     
@@ -350,6 +350,7 @@
   
 </body>
 </html>
+
 
 
 
