--- a/13Sept.html
+++ b/13Sept.html
@@ -230,7 +230,38 @@ async function sendTest() {
       ],
       subject: "🔥 Test desde el botón",
       text: "Hola! Este es un correo enviado desde el botón en la web ✅",
-      html: "<h2 style='color:cyan'>Step Up Crew</h2><p>Email enviado desde la web 🚀</p>"
+      html: "<section id="hero" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
+  <div class="absolute inset-0 bg-black/0"></div> 
+  
+  <div class="relative z-10 max-w-6xl mx-auto px-6 grid md:grid-cols-2 items-center gap-8">
+    
+    <!-- Text content -->
+    <div>
+      <h1 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-bold text-white glow mb-6 leading-tight">
+        Estamos de vuelta: Step Up x Trigga Fingaz
+      </h1>
+      <p class="text-base sm:text-lg md:text-xl text-gray-300 max-w-md mx-auto md:mx-0">
+        Una noche de colaboración inédita, energía brutal y basslines pesados.
+      </p>
+
+      <!-- CTA Button -->
+      <div class="mt-6">
+        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre"
+           target="_blank"
+           class="inline-block px-6 sm:px-8 py-2 sm:py-3 border-2 border-cyan-400 text-cyan-400 rounded-full font-semibold text-base sm:text-lg hover:bg-cyan-400 hover:text-black transition-all duration-300 shadow-lg">
+          🎟️ Consigue tus tickets ahora
+        </a>
+      </div>
+    </div>
+    <!-- Flyer -->
+    <div class="flex justify-center">
+      <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[500px] object-contain" />
+    </div>
+    
+  </div>
+ 
+</section>
+</p>"
     })
   });
 
