--- a/13Sept.html
+++ b/13Sept.html
@@ -230,7 +230,7 @@ async function sendTest() {
       ],
       subject: "🔥 Test desde el botón",
       text: "Hola! Este es un correo enviado desde el botón en la web ✅",
-      html: "<section id="hero" class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
+      html: " class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
   <div class="absolute inset-0 bg-black/0"></div> 
   
   <div class="relative z-10 max-w-6xl mx-auto px-6 grid md:grid-cols-2 items-center gap-8">
@@ -258,10 +258,7 @@ async function sendTest() {
       <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[500px] object-contain" />
     </div>
     
-  </div>
- 
-</section>
-</p>"
+  </div>"
     })
   });
 
