--- a/13Sept.html
+++ b/13Sept.html
@@ -230,35 +230,62 @@ async function sendTest() {
       ],
       subject: "🔥 Test desde el botón",
       text: "Hola! Este es un correo enviado desde el botón en la web ✅",
-      html: " class="relative h-screen bg-cover bg-center flex items-center justify-center text-center" style="background-image: url('WPTG1309.png');">
-  <div class="absolute inset-0 bg-black/0"></div> 
-  
-  <div class="relative z-10 max-w-6xl mx-auto px-6 grid md:grid-cols-2 items-center gap-8">
-    
-    <!-- Text content -->
-    <div>
-      <h1 class="text-2xl sm:text-3xl md:text-5xl lg:text-6xl font-bold text-white glow mb-6 leading-tight">
-        Estamos de vuelta: Step Up x Trigga Fingaz
-      </h1>
-      <p class="text-base sm:text-lg md:text-xl text-gray-300 max-w-md mx-auto md:mx-0">
-        Una noche de colaboración inédita, energía brutal y basslines pesados.
-      </p>
+      html: `
+        <!DOCTYPE html>
+        <html>
+        <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+          <title>Step Up x Trigga Fingaz</title>
+        </head>
+        <body style="margin:0; padding:0; background-color:#000000; font-family: Arial, sans-serif;">
 
-      <!-- CTA Button -->
-      <div class="mt-6">
-        <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre"
-           target="_blank"
-           class="inline-block px-6 sm:px-8 py-2 sm:py-3 border-2 border-cyan-400 text-cyan-400 rounded-full font-semibold text-base sm:text-lg hover:bg-cyan-400 hover:text-black transition-all duration-300 shadow-lg">
-          🎟️ Consigue tus tickets ahora
-        </a>
-      </div>
-    </div>
-    <!-- Flyer -->
-    <div class="flex justify-center">
-      <img src="TG1309.png" alt="Trigga Fingaz Flyer" class="rounded-lg shadow-xl max-h-[500px] object-contain" />
-    </div>
-    
-  </div>"
+          <!-- Wrapper -->
+          <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="background-image: url('WPTG1309.png'); background-size: cover; background-position: center; padding: 30px 0;">
+            <tr>
+              <td align="center">
+
+                <!-- Container -->
+                <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px; margin: 0 auto; background-color: rgba(0,0,0,0.7); border-radius: 12px; overflow: hidden;">
+                  <tr>
+                    <td align="center" style="padding: 30px 20px 20px 20px; color: #ffffff;">
+
+                      <h1 style="font-size: 26px; line-height: 1.3; font-weight: bold; margin: 0 0 20px 0;">
+                        Estamos de vuelta: Step Up x Trigga Fingaz
+                      </h1>
+
+                      <p style="font-size: 16px; line-height: 1.5; color: #cccccc; margin: 0 0 30px 0;">
+                        Una noche de colaboración inédita, energía brutal y basslines pesados.
+                      </p>
+
+                      <!-- CTA -->
+                      <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre"
+                         target="_blank"
+                         style="display: inline-block; background-color: transparent; border: 2px solid #00ffff; color: #00ffff; text-decoration: none; padding: 12px 24px; font-weight: bold; font-size: 16px; border-radius: 30px;">
+                        🎟️ Consigue tus tickets ahora
+                      </a>
+
+                    </td>
+                  </tr>
+
+                  <!-- Flyer -->
+                  <tr>
+                    <td align="center" style="padding: 20px;">
+                      <img src="TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" />
+                    </td>
+                  </tr>
+
+                </table>
+                <!-- End Container -->
+
+              </td>
+            </tr>
+          </table>
+          <!-- End Wrapper -->
+
+        </body>
+        </html>
+      `
     })
   });
 
@@ -273,8 +300,6 @@ async function sendTest() {
 </script>
 
 <button onclick="sendTest()">Enviar test</button>
-
-
 
   
 </body>
