--- a/13Sept.html
+++ b/13Sept.html
@@ -226,7 +226,7 @@ async function sendTest() {
     body: JSON.stringify({
       to: [
         { email: "junglesoul.c@gmail.com" },
-        { email: "friend2@email.com" }
+        { email: "" }
       ],
       subject: "🔥 Test desde el botón",
       text: "Hola! Este es un correo enviado desde el botón en la web ✅",
@@ -238,15 +238,18 @@ async function sendTest() {
           <meta name="viewport" content="width=device-width, initial-scale=1.0" />
           <title>Step Up x Trigga Fingaz</title>
         </head>
-        <body style="margin:0; padding:0; background-color:#000000; font-family: Arial, sans-serif;">
+        <body style="margin:0; padding:0; background-color:#000000; font-family: Arial, sans-serif;" bgcolor="#000000">
 
           <!-- Wrapper -->
-          <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="background-image: url('WPTG1309.png'); background-size: cover; background-position: center; padding: 30px 0;">
+          <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#000000" style="background-color:#000000; margin:0; padding:0;">
             <tr>
               <td align="center">
 
+                <!-- Hero Image -->
+                <img src="https://stepuptherave.club/WPTG1309.png" alt="Background Banner" width="100%" style="max-width: 600px; display: block; border: 0; margin: 0 auto;" />
+
                 <!-- Container -->
-                <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px; margin: 0 auto; background-color: rgba(0,0,0,0.7); border-radius: 12px; overflow: hidden;">
+                <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px; margin: 0 auto; background-color:#111111; border-radius: 12px; overflow: hidden;">
                   <tr>
                     <td align="center" style="padding: 30px 20px 20px 20px; color: #ffffff;">
 
@@ -271,10 +274,9 @@ async function sendTest() {
                   <!-- Flyer -->
                   <tr>
                     <td align="center" style="padding: 20px;">
-                      <img src="TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" />
+                      <img src="https://stepuptherave.club/TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" />
                     </td>
                   </tr>
-
                 </table>
                 <!-- End Container -->
 
@@ -300,6 +302,7 @@ async function sendTest() {
 </script>
 
 <button onclick="sendTest()">Enviar test</button>
+
 
   
 </body>
