--- a/13Sept.html
+++ b/13Sept.html
@@ -230,7 +230,6 @@ async function sendTest() {
         { email: "friend2@email.com", name: "Friend 2" }
       ],
       subject: "🔥 Test desde el botón",
-      textContent: "Hola! Este es un correo enviado desde el botón en la web ✅",
       htmlContent: `
         <!DOCTYPE html>
         <html>
@@ -247,7 +246,7 @@ async function sendTest() {
               <td align="center">
 
                 <!-- Hero Image -->
-                <img src="https://yourdomain.com/WPTG1309.png" alt="Background Banner" width="100%" style="max-width: 600px; display: block; border: 0; margin: 0 auto;" />
+                <img src="https://stepuptherave.club/WPTG1309.png" alt="Background Banner" width="100%" style="max-width: 600px; display: block; border: 0; margin: 0 auto;" />
 
                 <!-- Container -->
                 <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px; margin: 0 auto; background-color:#111111; border-radius: 12px; overflow: hidden;">
@@ -275,7 +274,7 @@ async function sendTest() {
                   <!-- Flyer -->
                   <tr>
                     <td align="center" style="padding: 20px;">
-                      <img src="https://yourdomain.com/TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" />
+                      <img src="https://stepuptherave.club/TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" />
                     </td>
                   </tr>
                 </table>
