--- a/13Sept.html
+++ b/13Sept.html
@@ -221,6 +221,9 @@
 <!-- Trigger -->
 <script>
 async function sendTest() {
+  // Create the HTML content as a single string without line breaks
+  const htmlContent = '<!-- Wrapper --><table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#000000" style="background-color:#000000; margin:0; padding:0;"><tr><td align="center"><!-- Hero Image --><img src="https://stepuptherave.club/WPTG1309.png" alt="Background Banner" width="100%" style="max-width: 600px; display: block; border: 0; margin: 0 auto;" /><!-- Container --><table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px; margin: 0 auto; background-color:#111111; border-radius: 12px; overflow: hidden;"><tr><td align="center" style="padding: 30px 20px 20px 20px; color: #ffffff;"><h1 style="font-size: 26px; line-height: 1.3; font-weight: bold; margin: 0 0 20px 0;">Estamos de vuelta: Step Up x Trigga Fingaz</h1><p style="font-size: 16px; line-height: 1.5; color: #cccccc; margin: 0 0 30px 0;">Una noche de colaboración inédita, energía brutal y basslines pesados.</p><!-- CTA --><a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre" target="_blank" style="display: inline-block; background-color: transparent; border: 2px solid #00ffff; color: #00ffff; text-decoration: none; padding: 12px 24px; font-weight: bold; font-size: 16px; border-radius: 30px;">🎟️ Consigue tus tickets ahora</a></td></tr><!-- Flyer --><tr><td align="center" style="padding: 20px;"><img src="https://stepuptherave.club/TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" /></td></tr></table><!-- End Container --></td></tr></table><!-- End Wrapper -->';
+
   const response = await fetch("https://step-up-eight.vercel.app/api/send-email", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -231,52 +234,7 @@ async function sendTest() {
         { email: "friend2@email.com", name: "Friend 2" }
       ],
       subject: "🔥 Test desde el botón",
-      htmlContent: `
-        <!-- Wrapper -->
-        <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" bgcolor="#000000" style="background-color:#000000; margin:0; padding:0;">
-          <tr>
-            <td align="center">
-
-              <!-- Hero Image -->
-              <img src="https://stepuptherave.club/WPTG1309.png" alt="Background Banner" width="100%" style="max-width: 600px; display: block; border: 0; margin: 0 auto;" />
-
-              <!-- Container -->
-              <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0" style="max-width: 600px; margin: 0 auto; background-color:#111111; border-radius: 12px; overflow: hidden;">
-                <tr>
-                  <td align="center" style="padding: 30px 20px 20px 20px; color: #ffffff;">
-
-                    <h1 style="font-size: 26px; line-height: 1.3; font-weight: bold; margin: 0 0 20px 0;">
-                      Estamos de vuelta: Step Up x Trigga Fingaz
-                    </h1>
-
-                    <p style="font-size: 16px; line-height: 1.5; color: #cccccc; margin: 0 0 30px 0;">
-                      Una noche de colaboración inédita, energía brutal y basslines pesados.
-                    </p>
-
-                    <!-- CTA -->
-                    <a href="https://ticketplus.cl/events/clubroom-presenta-drum-bass-trigga-fingaz-sabado-13-septiembre"
-                       target="_blank"
-                       style="display: inline-block; background-color: transparent; border: 2px solid #00ffff; color: #00ffff; text-decoration: none; padding: 12px 24px; font-weight: bold; font-size: 16px; border-radius: 30px;">
-                      🎟️ Consigue tus tickets ahora
-                    </a>
-
-                  </td>
-                </tr>
-
-                <!-- Flyer -->
-                <tr>
-                  <td align="center" style="padding: 20px;">
-                    <img src="https://stepuptherave.club/TG1309.png" alt="Trigga Fingaz Flyer" width="100%" style="max-width: 500px; height: auto; border-radius: 10px; display: block; margin: 0 auto; box-shadow: 0 4px 12px rgba(0,0,0,0.4);" />
-                  </td>
-                </tr>
-              </table>
-              <!-- End Container -->
-
-            </td>
-          </tr>
-        </table>
-        <!-- End Wrapper -->
-      `
+      htmlContent: htmlContent
     })
   });
 
