--- a/3s.html
+++ b/3s.html
@@ -164,7 +164,7 @@
         
         <h2>Vista Previa del Email</h2>
         <div class="email-preview">
-            <p><strong>Asunto:</strong> 🔥 Test desde el botón</p>
+            <p><strong>Asunto:</strong> 🔥 Test 2 desde el botón</p>
             <p><strong>Remitente:</strong> Step Up Events (you@yourdomain.com)</p>
             <p><strong>Destinatarios:</strong> Jungle Soul (junglesoul.c@gmail.com), Friend 2 (friend2@email.com)</p>
             <img src="https://stepuptherave.club/TG1309.png" alt="Vista previa del evento" style="max-width: 100%">
