--- a/3s.html
+++ b/3s.html
@@ -240,7 +240,7 @@ async function sendTest() {
                             { email: "junglesoul.c@gmail.com", name: "Jungle Soul" },
                             { email: "friend2@email.com", name: "Friend 2" }
                         ],
-                        subject: "🔥 Test desde el botón",
+                        subject: "🔥 Test 2 desde el botón",
                         htmlContent: htmlContent
                     })
                 });
