--- a/3s.html
+++ b/3s.html
@@ -223,7 +223,7 @@ async function sendTest() {
         async function sendTest() {
             // Create the HTML content as a single string without line breaks
             // This is the key fix - ensuring the HTML is a single line with proper encoding
-            const htmlContent = '<p>He modificado el código para asegurar que el contenido HTML se envíe correctamente a la API de Brevo:</p>;
+            const htmlContent = '<p>He modificado el código para asegurar que el contenido HTML se envíe correctamente a la API de Brevo:</p>';
 
             const statusDiv = document.getElementById('status');
             statusDiv.style.display = 'block';
